# jenkins-mcp

./: .gitignore  README.md  pyproject.toml
src/jenkins_mcp/: jenkins_client.py  server.py  trigger_store.py
tests/: test_server.py
